--- a/src/main/resources/assets/tinkerers_toolbox/lang/en_us.existing.json
+++ b/src/main/resources/assets/tinkerers_toolbox/lang/en_us.existing.json
@@ -1,5 +1,6 @@
 {
   "tinkerers_toolbox.gui.tool_placeholder": "Any Tool",
   "tinkerers_toolbox.gui.mineral_placeholder": "Any Mineral",
-  "tag.item.tinkerers_toolbox.mineral": "Mineral"
+  "tag.item.tinkerers_toolbox.mineral": "Mineral",
+  "itemGroup.tinkerers_toolbox": "Tinkerer's Toolbox"
 }
